# GenAI-Stream-

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirement.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: server.py
stockpreds/: __init__.py  config.py
stockpreds/data/: __init__.py  loader.py
stockpreds/features/: __init__.py  indicators.py
stockpreds/models/: __init__.py  lstm.py  trainer.py
stockpreds/utils/: __init__.py  metrics.py
tests/: test_indicators.py  test_metrics.py  test_trainer.py
